[project]
name = "marlbase"
version = "0.1.0"
description = "Fast Multi-Agent RL: a collection of algorithms applied in multi-agent environments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cpprb==11.0.0",
    "torch==2.6.0",
    "click==8.1.7",
    "einops==0.8.0",
    "hydra-core==1.3.2",
    "hydra-submitit-launcher==1.2.0",
    "imageio==2.9.0",
    "imageio-ffmpeg==0.5.1",
    "matplotlib==3.9.2",
    "munch==4.0.0",
    "pandas==2.2.2",
    "seaborn==0.13.2",
    "pyyaml==6.0.2",
    "wandb>=0.19.5",
    "hydra-core>=1.1",
    "lbforaging",
    "gymnasium",
    "lux-marl",
]
authors = [
    {name = "Filippos Christianos, Lukas Schäfer"},
]

[project.urls]
Homepage = "https://github.com/marl-book/codebase"

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
]

[tool.uv.sources]
lbforaging = { path = "../lb-foraging", editable = true }
gymnasium = { path = "../Gymnasium", editable = true }
lux-marl = { path = "../lux-marl", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

